[MRG][UI][FIX] Fix inconsistency in view blog and view blog post layout so same CSS can apply (contrast was bad in fivealive-lite). [from revision 75203]

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -1902,7 +1902,7 @@ td.url {
   margin-right: 1rem;
   display: block; }
 
-.tiki_blogs .card.postbody, .tiki_blogs .card.postbody .card-header, .tiki_blogs .card.postbody .card-footer {
+.tiki_blogs .card.blogpost, .tiki_blogs .card.blogpost .card-header, .tiki_blogs .card.blogpost .card-footer {
   background-color: transparent;
   border: none; }
 
