--- a/themes/fivealive-lite/options/grape/css/grape.css
+++ b/themes/fivealive-lite/options/grape/css/grape.css
@@ -219,13 +219,10 @@ input[type="checkbox"].preffilter-toggle-round:checked + label::before {
 .topbar .cssmenu_horiz ul {
   background: #8e286a; }
 
-.blog-postbody-title, .blog-postbody-title a, .postbody-title .title > .card-title a.link, .postbody h2.card-title {
-  color: #fff; }
-
 .blog-postbody-title h2.card-title {
   font-size: 20px; }
 
-.postbody .card-header {
+.blogpost .card-header {
   background: #a52874; }
 
 .siteloginbar_popup .dropdown-menu > li > a {
