--- a/themes/fivealive-lite/options/lemon/css/lemon.css
+++ b/themes/fivealive-lite/options/lemon/css/lemon.css
@@ -219,13 +219,10 @@ input[type="checkbox"].preffilter-toggle-round:checked + label::before {
 .topbar .cssmenu_horiz ul {
   background: #c75a29; }
 
-.blog-postbody-title, .blog-postbody-title a, .postbody-title .title > .card-title a.link, .postbody h2.card-title {
-  color: #000; }
-
 .blog-postbody-title h2.card-title {
   font-size: 20px; }
 
-.postbody .card-header {
+.blogpost .card-header {
   background: #e4af00; }
 
 .siteloginbar_popup .dropdown-menu > li > a {
